@@ -1,4 +1,5 @@
 1.5.0
+* Wallet: By default tx's sequence numbers are same as currrent unix time. Can be overwritten with "-seq <val"
 * Client: Additional mining statistics
 * Client: support for Web Wallets (volatile wallets provided by the browser, not kept on the server)
 * Client: Implemented BIP 130 - Direct headers announcement
